--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="signup_btn">Signup</string>
     <string name="login_activity_name">Login</string>
     <string name="signup_activity_name">Signup</string>
+    <string name="username_label">Username</string>
+    <string name="password_label">Password</string>
+    <string name="username_required_message">Username is Required</string>
+    <string name="password_required_message">Password is Required</string>
 </resources>
