--- a/android/app/src/main/res/values-tr-rTR/strings.xml
+++ b/android/app/src/main/res/values-tr-rTR/strings.xml
@@ -9,4 +9,5 @@
     <string name="username_required_message">Kullanıcı adı alanı zorunludur</string>
     <string name="password_required_message">Şifre alanı zorunludur</string>
     <string name="login_btn">Giriş Yap</string>
+    <string name="loading">Yükleniyor...</string>
 </resources>
