--- a/android/app/src/main/res/values-tr-rTR/strings.xml
+++ b/android/app/src/main/res/values-tr-rTR/strings.xml
@@ -10,4 +10,6 @@
     <string name="password_required_message">Şifre alanı zorunludur</string>
     <string name="login_btn">Giriş Yap</string>
     <string name="loading">Yükleniyor...</string>
+    <string name="username_used">Kullanıcı adı zaten kullanımda</string>
+    <string name="login_invalid">Kullanıcı adı veya şifre geçersiz</string>
 </resources>
