--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="username_required_message">Username is Required</string>
     <string name="password_required_message">Password is Required</string>
     <string name="loading">Loading...</string>
+    <string name="username_used">Username already in use</string>
+    <string name="login_invalid">Username or password invalid</string>
 </resources>
