--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="loading">Loading...</string>
     <string name="username_used">Username already in use</string>
     <string name="login_invalid">Username or password invalid</string>
-    <string name="create_new_todo">Create New Todo</string>
+    <string name="create_new_category">Create New Category</string>
     <string name="create_new_note">Create New Note</string>
 </resources>
