Added category create

--- a/android/app/src/main/res/values-tr-rTR/strings.xml
+++ b/android/app/src/main/res/values-tr-rTR/strings.xml
@@ -8,6 +8,7 @@
     <string name="password_label">Şifre</string>
     <string name="username_required_message">Kullanıcı adı alanı zorunludur</string>
     <string name="password_required_message">Şifre alanı zorunludur</string>
+    <string name="category_name_required_message">Kategori alanı zorunludur.</string>
     <string name="login_btn">Giriş Yap</string>
     <string name="loading">Yükleniyor...</string>
     <string name="username_used">Kullanıcı adı zaten kullanımda</string>
