--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="password_label">Password</string>
     <string name="username_required_message">Username is Required</string>
     <string name="password_required_message">Password is Required</string>
+    <string name="category_name_required_message">Category name is Required</string>
     <string name="loading">Loading...</string>
     <string name="username_used">Username already in use</string>
     <string name="login_invalid">Username or password invalid</string>
