--- a/android/app/src/main/res/values-tr-rTR/strings.xml
+++ b/android/app/src/main/res/values-tr-rTR/strings.xml
@@ -23,4 +23,7 @@
     <string name="category_name">Kategori Adı</string>
     <string name="tab_notes_name">Notlar</string>
     <string name="tab_categories_name">Kategoriler</string>
+    <string name="yes">Evet</string>
+    <string name="no">Hayır</string>
+    <string name="category_delete">Gerçekten Silmek istediğine emin misin ?</string>
 </resources>
