Category delete implemented

--- a/android/app/src/main/res/values-tr-rTR/strings.xml
+++ b/android/app/src/main/res/values-tr-rTR/strings.xml
@@ -26,4 +26,5 @@
     <string name="yes">Evet</string>
     <string name="no">Hayır</string>
     <string name="category_delete">Gerçekten Silmek istediğine emin misin ?</string>
+    <string name="category_delete_title">Kategori Silmek</string>
 </resources>
