--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="category_delete">Are you sure really want to delete it ?</string>
+    <string name="category_delete_title">Category Delete</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
