--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="signup_activity_name">Signup</string>
     <string name="username_label">Username</string>
     <string name="password_label">Password</string>
+    <string name="new_password_label">New Password</string>
     <string name="username_required_message">Username is Required</string>
     <string name="password_required_message">Password is Required</string>
     <string name="category_name_required_message">Category name is Required</string>
@@ -33,6 +34,8 @@
     <string name="note_content">Note Content</string>
     <string name="note_create_btn">Create Note</string>
     <string name="category_select_prompt">Choose a Category</string>
+    <string name="profile_update">Profile Update</string>
+    <string name="profile_update_success">The profile has been updated.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
